--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,9 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.4.6"
+      "express": "2.5.8"
     , "jade": ">= 0.0.1"
     , "request" : ""
+    , "fetch" : ""
   }
 }
